[tool.poetry]
name = "xcutor"
version = "0.1.0"
description = "Xcutor - a collection of Python concurrent.futures.Executor implementations"
authors = ["Jackie Tung <jackie.tung@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
